<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/Logo"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="75dp">

        <Spinner
            android:id="@+id/spinner_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/motTraduit"
            android:textSize="18dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:background=""
            android:textColor="@color/white"
            android:text="@string/motATraduire"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/nombre_decimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="numberDecimal"
            android:padding="12dp"
            android:textSize="24dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bouton_traduire"
            android:layout_width="367dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FFAEC9"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/translate"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/bouton_ajoutBDD"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            android:backgroundTint="#FFAEC9"
            android:padding="10dp"
            android:text="@string/addBdd"
            android:textSize="15dp" />

        <Button
            android:id="@+id/bouton_suppBDD"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:backgroundTint="#FFAEC9"
            android:text="@string/suppBdd"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>